Added capture() method to logger contexts